Kustomize/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: dev-nginx
  ports:
  - port: 8080
    targetPort: nginx-port-name
    nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-sc
spec:
  type: NodePort
  selector:
    app: dev-nginx-with-sc
  ports:
  - port: 8443
    targetPort: nginx-sc-port
    nodePort: 30003
